# sfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
assets/shaders/: basic.frag  basic.vert
include/: Camera.hpp  Geometry.hpp  Shader.hpp  pch.h
include/glad/: gl.h
src/: Camera.cpp  Geometry.cpp  Main.cpp  Shader.cpp  main.cpp
